feat: add path request to the response with names
